--- a/Lab2_part2/Lab2_maze.css
+++ b/Lab2_part2/Lab2_maze.css
@@ -2,7 +2,43 @@
 CSE 190 M Lab 6 CSS file
 You don't need to download or edit this file.
 */
+/* Add new CSS rules for the history table */
+#history {
+	position: absolute;
+	top: -50;
+	left: -50;
 
+	padding: 10px;
+	background-color: white;
+	border: 1px solid #ccc;
+  }
+  
+  #history h3 {
+	margin: 0 0 10px;
+  }
+  
+  #history table {
+	border-collapse: collapse;
+  }
+  
+  #history th, #history td {
+	border: 1px solid #ccc;
+	padding: 5px;
+	text-align: center;
+  }
+  
+  #history th {
+	background-color: #eee;
+  }
+  
+  #history td {
+	background-color: #fff;
+  }
+  
+  #history #wins, #history #losses {
+	font-weight: bold;
+  }
+  
 h1, h2 {
 	text-align: center;
 }
